Use the column comment for extra "heuristic" info. Its value is a JSON object. Avoid thus the JavaScript hard coding. Don't display attributes with null values. Truncate long text values before displaying them.

--- a/styles/facebase.css
+++ b/styles/facebase.css
@@ -147,3 +147,9 @@ td.itemBody {
     padding: 5px 2px 5px 5px;
 }
 
+.truncate {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
